still trying to fix cuisine line overflow, no go yet. prepping to pull Brian's styling changes

--- a/style.css
+++ b/style.css
@@ -33,4 +33,7 @@ nav .brand-logo{
 .test{
     color: black !important;
 }
-
+.limit-text {
+    height: 2em;
+    overflow: hidden;
+}
